Apply minimum styles to base layout.
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/web/css/README
+++ b/web/css/README
@@ -1,1 +1,2 @@
-BOOTSTRAP [1.3.0]: http://twitter.github.com/bootstrap/
+BOOTSTRAP         [1.3.0]: http://twitter.github.com/bootstrap/
+BOOTSTRAP-EXTRA [PATCHES]: http://github.com/lightglitch/bootstrap-xtra/
