Kendo UI CSS files.
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/web/css/README
+++ b/web/css/README
@@ -1,2 +1,11 @@
+================================================================================
+LIBRARIES
+================================================================================
+
 BOOTSTRAP         [1.3.0]: http://twitter.github.com/bootstrap/
 BOOTSTRAP-EXTRA [PATCHES]: http://github.com/lightglitch/bootstrap-xtra/
+KENDO UI          [BETA2]: http://www.kendoui.com
+
+Kendo UI is included as RAW CSS in siwapp.less to preserve CSS parsing order.
+
+================================================================================
