README for CSS files.
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/web/css/README
+++ b/web/css/README
@@ -9,3 +9,37 @@ KENDO UI          [BETA2]: http://www.kendoui.com
 Kendo UI is included as RAW CSS in siwapp.less to preserve CSS parsing order.
 
 ================================================================================
+BOOTSTRAP FILES
+================================================================================
+
+  + bootstrap.less
+  + reset.less
+  + variables.less
+  + mixins.less
+  + scaffolding.less
+  + type.less
+  + forms.less
+  + tables.less
+  + patterns.less
+
+================================================================================
+BOOTSTRAP-EXTRA FILES
+================================================================================
+
+  + bootstrap-patches.less
+
+================================================================================
+KENDO UI FILES
+================================================================================
+
+  + kendo.common.min.css
+  + kendo.kendo.min.css
+  + Kendo/*.*
+
+================================================================================
+SIWAPP FILES
+================================================================================
+
+  + siwapp.less // Our own bootstrap LESS file.
+
+================================================================================
