Changes pre-twitter-bootstrap 2.0
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/web/css/README
+++ b/web/css/README
@@ -41,6 +41,8 @@ KENDO UI FILES
 SIWAPP FILES
 ================================================================================
 
-  + siwapp.less // Our own bootstrap LESS file.
+  + siwapp.less          // Our own bootstrap LESS file.
+  + siwapp-files/*.less  // Custom styles
+  + siwapp-files/fonts/* // Iconic Fonts: http://somerandomdude.com/work/iconic/
 
 ================================================================================
